--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
   <section id="Home">
     <div class="home-left">
-      <img src="https://github.com/vikash-2k25/My-Portifolio/blob/main/vikashh.jpg?raw=true" alt="Vikash" />
+      <img src="https://github.com/vikash-2k25/My-Portifolio/blob/main/vikAsh.png?raw=true" alt="Vikash" />
     </div>
     <div class="home-right">
       <h1 class="home-h1">Hi, I am Vikash</h1>
@@ -392,3 +392,4 @@
   </footer>
 </body>
 </html>
+
