Revise portfolio content and enhance summaries
Updated the professional summary and project descriptions in the portfolio.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <section id="about">
     <h2 class="about-h2">Professional Summary</h2>
     <p class="about-para">
-      I am a BCA graduate from Dr. Bhimrao Ambedkar University (CGPA: 8.0) with a passion for Exploratory Data Analysis (EDA) and KPI-driven dashboarding. [cite: 35, 36] Having interned at CodeAlpha as a Data Analytics Intern, I have hands-on experience in cleaning complex data and building reporting structures that drive business value.
+      Detail-oriented and results-driven Data Analyst with hands-on end-to-end experience in the complete data analytics lifecycle — from data extraction and cleaning to modeling, visualization, and business insight delivery. Proficient in PostgreSQL, Python (Pandas, NumPy, Matplotlib), and Power BI, with strong expertise in Exploratory Data Analysis (EDA), KPI dashboard development, and data-driven storytelling. Experienced in transforming raw datasets into actionable insights by performing data preprocessing, feature engineering, trend analysis, and building interactive dashboards for business decision-making. Adept at working with real-world datasets in healthcare, HR, and e-commerce domains, delivering structured reports that improve operational efficiency and strategic planning.
     </p>
     <a href="https://drive.google.com/file/d/1ORpL5ejLi9hdbtYYQBflyGuHQdnBO5LN/view?usp=sharing" id="btn">See Resume</a>
   </section>
@@ -134,3 +134,4 @@
   </footer>
 </body>
 </html>
+
